fixed logo on smaller screen widths

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -428,3 +428,9 @@ p {
         bottom: 210px;
     }
 }
+
+@media only screen and (max-width: 340px) {
+    h1 {
+        font-size: 1.4rem;
+    }
+}
